# chips-for-free

./: .dir-locals.el  default.nix  project1.cabal  shell.nix
src/: .dir-locals.el  Chip.hs  Main.hs
