name:                chip-free
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chip
                         
  build-depends:      aeson >= 1.4.2.0
                    , base >=4.9
                    , bytestring >= 0.10.8.2
                    , containers >= 0.6.0.1
                    , polysemy
                    , polysemy-plugin
                    , text >= 1.2.3.1
                    , vector >= 0.12.0.2
  ghc-options: -O2 -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  default-extensions:
                     BlockArguments
                     DataKinds
                     DeriveFunctor
                     FlexibleContexts
                     GADTs
                     LambdaCase
                     PolyKinds
                     RankNTypes
                     ScopedTypeVariables
                     StandaloneDeriving
                     TypeApplications
                     TypeOperators
                     TypeFamilies
  default-language:    Haskell2010

executable chip
  main-is:             Main.hs
  build-depends:      base >=4.9
                    , chip-free
                    , bytestring >= 0.10.8.2
                    , polysemy
                    , polysemy-plugin
                    , vector >= 0.12.0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  default-extensions:
                     BlockArguments
                     DataKinds
                     DeriveFunctor
                     FlexibleContexts
                     GADTs
                     LambdaCase
                     PolyKinds
                     RankNTypes
                     ScopedTypeVariables
                     StandaloneDeriving
                     TypeApplications
                     TypeOperators
                     TypeFamilies